# GameOfLife

./: CMakeLists.txt  main.cpp
include/: LifeApp.h  LifeFrame.h  game.h  iconbitmap.xpm
src/: LifeApp.cpp  LifeFrame.cpp  game.cpp
